# flipper-zero-nrf24-scanner

./: CMakeLists.txt  README.md  flipper_zero_app.c  nrf24_jam.c  nrf24_jam.h
